--- a/public/styles/ClassificationPageStyles.css
+++ b/public/styles/ClassificationPageStyles.css
@@ -1,13 +1,4 @@
 
-.classificationBox {
-    position: absolute;
-    width: 100%;
-    height: 1350px;
-    background-color: rgb(255, 255, 255);
-    left: 0px;
-    top: 0px;
-}
-
 .inner {
     position: absolute;
     height: 885px;
@@ -17,7 +8,7 @@
     top: 50px;
 }
 
-.classificationTitle {
+.pageTitle {
     position: absolute;
     color: rgb(63, 63, 63);
     font-size: 27px;
@@ -29,6 +20,16 @@
     border-bottom-style: solid;
     border-bottom-width: 2px;
     border-bottom-color: rgb(224, 224, 224);
+}
+
+
+.classificationBox {
+    position: absolute;
+    width: 100%;
+    height: 1350px;
+    background-color: rgb(255, 255, 255);
+    left: 0px;
+    top: 0px;
 }
 
 .modelBox {
