--- a/public/styles/FooterBoxStyles.css
+++ b/public/styles/FooterBoxStyles.css
@@ -4,55 +4,126 @@
     bottom: 0px;
     left: 0px;
     width: 100%;
-    height: 280px;
+    height: 290px;
     margin: 0px;
     padding: 0px;
     z-index: 4;
     /*background-color: rgb(63, 63, 63);*/
     background: linear-gradient(to bottom right, rgb(72, 83, 235) 30%, rgb(138, 65, 255));
-    clip-path: polygon(0% 0%, 100% 25%, 100% 100%, 0 100%);
+}
+
+
+.footerBoxlogo {
+    position: absolute;
+    width: 50px;
+    left: calc(50% - 25px);
+    top: 20px;
 }
 
 .footerTitle {
     position: absolute;
     top: 55px;
-    left: calc(50% - 151px);
+    right: 0px;
     color: white;
-    font-size: 30px;
-    font-weight: 500;
+    width: 340px;
+    left: calc(50% - 170px);
+    font-size: 35px;
+    text-align: center;
+    letter-spacing: 4px;
     display: inline-block;
 }
 
-.footerLinks {
+.footerLinkDiv {
     position: absolute;
-    left: calc(50% - 50px);
-    top: 130px;
-    width: 100px;
-    height: 35px;
+    left: calc(50% - 120px);
+    top: 137px;
+    width: 250px;
+    height: 70px;
 }
 
-.sponsorButton {
-    padding-right: 15px;
+.footerLinkButton {
+    position: relative;
+    height: 50%;
+    width: 60%;
+    float: left;
+    outline: none;
+    background-color: transparent;
+    border: none;
 }
 
-.githubButton {
+.smallerFooterButton {
+    width: 40%;
+}
+
+.footerLinkButton:hover {
+    transform: scale(1.05);;
+}
+
+.footerLinkText {
+    position: absolute;
+    left: 30px;
+    top: 11px;
+    margin-top: 0px;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+}
+
+.footerLinkIcon {
+    position: absolute;
     padding-left: 15px;
+    height: 23px;
+    left: 0px;
+    padding-left: 0px;
+    top: 8px;
 }
 
-.authorParagraph {
+.copyRightText {
     position: absolute;
     left: calc(50% - 150px);
+    line-height: 22px;
     width: 300px;
-    top: 40px;
+    top: 210px;
     text-align: center;
-    color: rgb(201, 201, 201);
+    font-size: 15px;
+    color: rgb(255, 255, 255);
 }
 
-.copyRightParagraph {
+.goTopBackground {
     position: absolute;
-    left: calc(50% - 150px);
-    width: 300px;
-    top: 75px;
-    text-align: center;
-    color: rgb(201, 201, 201);
+    height: 70px;
+    width: 70px;
+    top: -35px;
+    right: 35px;
+    background-color: rgb(99, 71, 255);
+    border-radius: 50%;
+}
+
+.goTopButton {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    top: 10px;
+    right: 10px;
+    outline: none;
+    background-color: white;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.45);
+    transition: all .075s ease-out;
+}
+
+.goTopButton:hover {
+    transform: scale(1.05);
+    transition: all .075s ease-out;
+}
+
+.goTopButton:active {
+    transform: scale(1.0);
+}
+
+.goUpIcon {
+    position: absolute;
+    height: 60px;
+    top: -4px;
+    left: -4px;
 }
