--- a/public/styles/SettingsStyles.css
+++ b/public/styles/SettingsStyles.css
@@ -10,7 +10,7 @@
     background-color: white;
     box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
     z-index: 20;
-    border-radius: 7px;
+    border-radius: 4px;
 }
 
 .slideInRight {
@@ -49,8 +49,8 @@
     top: 50px;
     padding-top: 10px;
     width: 100%;
-    height: 290px;
-    background-color: white;
+    height: 200px;
+    background-color: rgb(255, 255, 255);
     border-top: solid 2px rgb(230, 230, 230);
 }
 
@@ -63,11 +63,41 @@
     margin-bottom: 7px;
 }
 
+.currentAccountBox {
+    position: relative;
+    left: 20px;
+    width: 330px;
+    height: 45px;
+    text-align: left;
+    padding-left: 5px;
+    outline: none;
+    border: none;
+    background-color: white;
+    border-bottom: solid 1px rgb(231, 231, 231);
+}
+
+.currentAccountLabel {
+    position: absolute;
+    top: -5px;
+    font-size: 17px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: rgb(63, 63, 63);
+}
+
+.currentAccountEmail {
+    position: absolute;
+    left: 120px;
+    top: -5px;
+    font-size: 17px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: rgb(63, 63, 63);
+}
+
 .settingButton {
     position: relative;
     left: 20px;
     width: 330px;
-    height: 60px;
+    height: 45px;
     text-align: left;
     padding-left: 5px;
     outline: none;
@@ -77,6 +107,8 @@
 }
 
 .settingText {
+    position: absolute;
+    top: -6px;
     font-size: 17px;
     font-family: 'Source Sans Pro', sans-serif;
     color: rgb(63, 63, 63);
@@ -98,51 +130,58 @@
 .settingsIcon {
     position: absolute;
     left: 9px;
-    top: 17px;
+    top: 10px;
     height: 25px;
     padding-right: 30px;
 }
 
+.legalBox {
+    position: relative;
+    top: 60px;
+    width: 100%;
+    height: 140px;
+    background-color: white;
+}
 
 /* contact section */
 .contactBox {
     position: relative;
-    top: 35px;
+    top: 60px;
     width: 100%;
     height: 470px;
     background-color: white;
     /*border-bottom: solid 2px rgb(224, 224, 224);*/
 }
 
-.contactSection {
+.informationSection {
     position: relative;
     left: 20px;
     width: 330px;
-    height: 60px;
+    height: 45px;
     padding-left: 5px;
     background-color: white;
     border-bottom: solid 1px rgb(231, 231, 231);
 }
 
-.contactSectionTitle {
+.informationSectionTitle {
     position: absolute;
-    top: 3px;
+    top: -5px;
     font-size: 17px;
     font-family: 'Source Sans Pro', sans-serif;
     color: rgb(63, 63, 63);
 }
 
-.contactSectionText {
+.informationSectionText {
     position: absolute;
-    left: 120px;
-    top: 2px;
+    left: 125px;
+    top: -5px;
     font-size: 17px;
     font-family: 'Source Sans Pro', sans-serif;
     color: rgb(63, 63, 63);
 }
 
 #linkText {
-    top: 20px;
+    top: 12px;
 }
 
 .contactInquirySection {
@@ -347,7 +386,7 @@
     color: rgb(135, 152, 250);
 }
 
-.privacyPolicyBox {
+.policyBox {
     position: absolute;
     top: 65px;
     left: 50px;
