updated api page, added responsiveness

--- a/public/styles/mediaQueries/sub1100px.css
+++ b/public/styles/mediaQueries/sub1100px.css
@@ -191,6 +191,29 @@
         height: 4150px;
     }
 
+    /* API DOCUMENTATION BOX */
+    .apiKeySection {
+        top: 100px;
+    }
+
+    .baseURLSection {
+        top: 115px;
+    }
+
+    .allHeadersSection {
+        top: 130px;
+    }
+
+    .endpointsSection {
+        top: 340px;
+    }
+
+ 
+
+
+    .endpointExplanationExampleBox {
+        top: 494px;
+    }
 }
 
 
@@ -268,6 +291,12 @@
         padding-right: 11px;
     }
 
+    /* API DOC BOX */
+    .apiDescriptionText {
+        width: 80%;
+        font-size: 18px;
+    }
+
 }
 
 @media (max-width: 850px) {
@@ -279,6 +308,25 @@
 
     .startBox {
         left: 18vw;
+    }
+
+    /* API DOC BOX */
+
+    .apiKeySection {
+        top: 112px;
+        height: 50px;
+    }
+
+    .baseURLSection {
+        top: 170px;
+    }
+
+    .allHeadersSection {
+        top: 175px;
+    }
+
+    .endpointsSection {
+        top: 395px;
     }
 
 }
