--- a/public/styles/ApiDocumentationStyles.css
+++ b/public/styles/ApiDocumentationStyles.css
@@ -1,6 +1,22 @@
 
 .apiDocumentationBox {
-    height: 7000px;
+    position: absolute;
+    width: 100%;
+    height: 1300px;
+    left: 0px;
+    top: 0px;
+}
+
+.tabOpen1 {
+    height: 2000px;
+}
+
+.tabOpen2 {
+    height: 2700px;
+}
+
+.tabOpen3 {
+    height: 3400px;
 }
 
 .innerDocumentationBox {
@@ -29,6 +45,7 @@
     top: 0px;
     font-size: 20px;
     left: 0px;
+    width: 90%;
 }
 
 .toggleThemeSwitchBox {
@@ -241,24 +258,7 @@
     height: 30px;
 }
 
-.endpointExplanationBox {
-    position: absolute;
-    top: 40px;
-    left: 0px;
-    width: 100%;
-    height: 0px;
-    background-color: transparent;
-}
 
-.endpointExplanationBox {
-    position: relative;
-    top: 50px;
-    left: 0px;
-    width: 100%;
-    height: calc(100% - 60px);
-    background-color: white;
-    overflow-y: scroll;
-}
 
 .clickedApiSectionButton {
     border: none;
@@ -326,139 +326,77 @@
 
 /* ENDPOINT EXPLANATION STYLES */
 
+.endpointExplanationBox {
+    position: relative;
+    top: 50px;
+    height: calc(100% - 60px);
+    background-color: white;
+    overflow-y: scroll;
+}
 
-.endpointExplanationDescriptionBox {
-    position: absolute;
-    left: 25px;
-    right: 25px;
-    top: 20px;
-    height: 97px;
+
+.endpointExplanationSubBox {
+    position: relative;
+    height: fit-content;
+    padding-bottom: 20px;
+    margin: 20px;
+    margin-right: 30px;
     border-bottom: solid 1px rgb(224, 224, 224);
 }
 
-.endpointExplanationBodyBox {
-    position: absolute;
-    top: 135px;
-    left: 25px;
-    height: 320px;
-    width: calc(50% - 40px);
-    border-bottom: solid 1px rgb(224, 224, 224);
-}
-
-.endpointExplanationResponseBox {
-    position: absolute;
-    top: 135px;
-    right: 25px;
-    height: 320px;
-    width: calc(50% - 40px);
-    border-bottom: solid 1px rgb(224, 224, 224);
-}
 
 .getResponseBox {
     left: 25px;
     right: 25px;
-    height: 210px;
+    height: 368px;
     width: auto;
 }
 
-.endpointExplanationExampleBox {
-    position: absolute;
-    top: 475px;
-    left: 25px;
-    right: 25px;
-}
-
 .getResponseExampleBox {
-    top: 363px;
+    top: 520px;
 }
 
-.endpointDescriptionText {
-    position: absolute;
-    top: 40px;
-    left: 15px;
-    font-size: 17px;
-    font-family: inherit;
-}
 
 .endpointEplanationTitleBox {
-    position: absolute;
     top: 0px;
     left: 0px;
+    right: 0px;
     height: 30px;
-    width: calc(100% - 5px);
     background-color: rgba(0, 0, 0, 0.075);
     border-left: 5px solid rgb(96, 93, 255);
     border-radius: 4px;
 }
 
 .endpointEplanationTitle {
-    position: absolute;
+    position: relative;
     top: 3px;
-    left: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     font-size: 19px;
     margin: 0px;
     color: rgb(35, 35, 35);
 }
 
+.endpointDescriptionText {
+    position: relative;
+    top: 7px;
+    padding-left: 15px;
+    padding-right: 10px;
+    font-size: 17px;
+    font-family: inherit;
+}
 
-/*.endpointExplanationResponseBox {
-    position: absolute;
-    top: 30px;
-    right: 20px;
-    height: calc(100% - 50px);
-    width: calc(50% - 40px);
-}*/
-
-.bodyCodeBlock {
-    position: absolute;
-    height: 256px;
+.codeBlock {
+    height: fit-content;
     width: calc(100% - 4px);
     top: 40px;
     left: 0px;
     border-radius: 4px;
     background-color: rgb(255, 255, 255);
-    padding: 0px;
+    margin-top: 12px;
     border: solid 1px rgb(155, 154, 255);
     border-radius: 5px;
     /*box-shadow: 0px 0px 5px 2px rgb(96, 93, 255, 0.075);*/
     transition: all .05s ease-out;
 }
 
-
-.responseCodeBlock {
-    position: absolute;
-    height: 256px;
-    width: calc(100% - 4px);
-    top: 40px;
-    left: 0px;
-    border-radius: 4px;
-    background-color: white;
-    padding: 0px;
-    border: solid 1px rgb(155, 154, 255);
-    border-radius: 5px;
-    /*box-shadow: 0px 0px 5px 2px rgb(96, 93, 255, 0.075);*/
-    transition: all .05s ease-out;
-}
-
-.getResponseCodeBlock {
-    height: 149px;
-}
-
-.exampleCodeBlock {
-    position: absolute;
-    height: 709px;
-    width: calc(100% - 4px);
-    top: 40px;
-    left: 0px;
-    border-radius: 4px;
-    background-color: white;
-    padding: 0px;
-    border: solid 1px rgb(155, 154, 255);
-    border-radius: 5px;
-    /*box-shadow: 0px 0px 5px 2px rgb(96, 93, 255, 0.075);*/
-    transition: all .05s ease-out;
-}
-
-.getResponseExampleCodeBox {
-    height: 336px;
-}
