--- a/public/styles/mediaQueries/sub1350px.css
+++ b/public/styles/mediaQueries/sub1350px.css
@@ -94,7 +94,7 @@
     }
 
     .homePageBox {
-        height: 3375px;
+        padding-bottom: 1800px;
     }
     
     .navigationLinkDiv {
@@ -317,7 +317,7 @@
     }
 
     .homePageBox {
-        height: 4375px;
+        padding-bottom: 3800px;
     }
 
 
