--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -9,3 +9,11 @@ html, body {
     margin: 0px;
     overflow-x: hidden;
 }
+
+
+.App {
+    position: relative;
+    margin: 0px;
+    width: 100%;
+    padding-bottom: 200px;
+}
