--- a/public/styles/ModelSubmissionStyles.css
+++ b/public/styles/ModelSubmissionStyles.css
@@ -1,8 +1,8 @@
 
 .modelSubmissionBox {
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 1350px;
+    padding-bottom: 200px;
     background-color: rgb(255, 255, 255);
     left: 0px;
     top: 0px;
