--- a/public/styles/ModelHelpStyles.css
+++ b/public/styles/ModelHelpStyles.css
@@ -58,9 +58,11 @@
     width: 96%;
     outline: none;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+    transition: all .1s ease-out;
 }
 
 .helpButton:hover {
+    transition: all .1s ease-out;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
 }
 
