--- a/public/styles/NavBarStyles.css
+++ b/public/styles/NavBarStyles.css
@@ -48,26 +48,11 @@
 
 .logo {
     position: absolute;
-    top: -2px;
+    top: -1px;
     left: -5px;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     border-radius: 50%;
-}
-
-
-.homeTitle {
-    position: absolute;
-    color: rgb(0, 0, 0); 
-    top: -11px;
-    left: 18%;
-    font-size: 22px;
-    font-weight: 600;
-    padding-right: 10px;
-    text-align: left;
-    font-family: 'Source Sans Pro', sans-serif;
-    white-space: nowrap;
-    font-feature-settings: "kern";
 }
 
 .navigationBox {
@@ -184,6 +169,7 @@
     border: solid 1px rgb(224, 224, 224);
     outline: none;
     background-color: white;
+    transition: all .1s ease-out;
 }
 
 .userSettingsIcon {
