--- a/public/styles/SettingsStyles.css
+++ b/public/styles/SettingsStyles.css
@@ -33,15 +33,20 @@
     border: none;
 }
 
+
 .closeIcon {
+    position: absolute;
+    left: 5px;
     height: 30px;
     border-radius: 50%;
+    border: solid 1px rgb(224, 224, 224);
     transition: all .1s ease-out;
 }
 
 .closeIcon:hover {
     transition: all .1s ease-out;
-    box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 1);
+    border: solid 1px rgba(90, 140, 255, 0.5);
+    box-shadow: 0 0 7px rgba(90, 156, 255, 0.5);
 }
 
 .userSettingsBox {
@@ -88,6 +93,9 @@
     position: absolute;
     left: 120px;
     top: -5px;
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
     font-size: 17px;
     font-family: 'Source Sans Pro', sans-serif;
     color: rgb(63, 63, 63);
@@ -173,7 +181,7 @@
 
 .informationSectionText {
     position: absolute;
-    left: 125px;
+    left: 150px;
     top: -5px;
     font-size: 17px;
     font-family: 'Source Sans Pro', sans-serif;
