--- a/public/styles/mediaQueries/sub800px.css
+++ b/public/styles/mediaQueries/sub800px.css
@@ -361,4 +361,10 @@
         width: 330px;
         left: calc(50% - 165px);
     }
+
+    .authFieldBox {
+        top: 40px;
+        transform: scale(0.8);
+    }
 }
+
