--- a/public/styles/mediaQueries/sub800px.css
+++ b/public/styles/mediaQueries/sub800px.css
@@ -366,5 +366,9 @@
         top: 40px;
         transform: scale(0.8);
     }
+
+    .verificationMessageBox {
+        transform: scale(0.8);
+    }
 }
 
