model naming input now runs without pressing enter, made footer title smaller

--- a/public/styles/mediaQueries/sub800px.css
+++ b/public/styles/mediaQueries/sub800px.css
@@ -370,5 +370,11 @@
     .verificationMessageBox {
         transform: scale(0.8);
     }
+
+    .footerTitle {
+        top: 60px;
+        font-size: 30px;
+    }
+    
 }
 
