--- a/public/styles/mediaQueries/sub1100px.css
+++ b/public/styles/mediaQueries/sub1100px.css
@@ -112,13 +112,13 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        right: -1vw;
-        border-radius: 3px;
-        top: 70px;
+        right: -31px;
+        border-bottom-left-radius: 3px;
+        top: 52px;
         width: 230px;
         background-color: rgb(255, 255, 255);
         z-index: 16;
-        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+        box-shadow: 0 10px 25px -15px rgb(34 34 34);
     }
 
     .navigationLinkDiv {
