fixed typos in API docs, fixed div height alignment

--- a/public/styles/ApiDocumentationStyles.css
+++ b/public/styles/ApiDocumentationStyles.css
@@ -215,7 +215,7 @@
 
 .headersCodeBlock {
     position: absolute;
-    height: 123px;
+    height: fit-content;
     width: 500px;
     top: 60px;
     left: calc(50% - 250px);
