--- a/public/styles/NavBarStyles.css
+++ b/public/styles/NavBarStyles.css
@@ -6,7 +6,8 @@
     top: 0px;
     left: 0px;
     background-color: rgba(255, 255, 255);
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 1px 5px rgba(88, 99, 243, 0.15);
+    border-bottom: 1px solid rgb(228, 228, 228);
     z-index: 10;
 }
 
@@ -28,7 +29,7 @@
     outline: none;
     background-color: transparent;
     border: none;
-    padding-left: 50px;
+    padding-left: 43px;
     padding-right: 10px;
     padding-top: 0.01%;
     color: rgb(50, 50, 50);
@@ -39,19 +40,21 @@
     white-space: nowrap;
     letter-spacing: 1px;
     font-feature-settings: "kern";
+    transition: all 0.15s ease-out;
 }
 
 .homeBoxButton:hover {
     background-color: rgb(243, 243, 243);
+    transition: all 0.15s ease-out;
 }
 
 
 .logo {
     position: absolute;
-    top: -1px;
+    top: 0px;
     left: -5px;
-    width: 38px;
-    height: 38px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
 }
 
@@ -72,9 +75,9 @@
     height: 37px;
     padding-left: 40px;
     padding-right: 40px;
-    border-right: solid;
+    /*border-right: solid;
     border-width: 1px;
-    border-color: rgb(224, 224, 224);
+    border-color: rgb(224, 224, 224);*/
 }
 
 .lastNavigationLinkDiv {
@@ -98,7 +101,7 @@
 }
 
 .navigationButton:hover {
-    color:rgb(136, 136, 136);
+    color:rgb(95, 95, 95);
 }
 
 .authBox {
@@ -142,7 +145,7 @@
 }
 
 .signupButton:hover, .loginButton:hover {
-    color:rgb(136, 136, 136);
+    color:rgb(95, 95, 95);
 }
 
 
