--- a/public/styles/SettingsStyles.css
+++ b/public/styles/SettingsStyles.css
@@ -51,12 +51,13 @@
 
 .userSettingsBox {
     position: relative;
-    top: 50px;
-    padding-top: 10px;
+    top: 45px;
     width: 100%;
     height: 200px;
+    background-color: transparent;
+    /*padding-top: 10px;
     background-color: rgb(255, 255, 255);
-    border-top: solid 2px rgb(230, 230, 230);
+    border-top: solid 2px rgb(230, 230, 230);*/
 }
 
 .settingsTitle {
@@ -145,7 +146,7 @@
 
 .legalBox {
     position: relative;
-    top: 60px;
+    top: 37px;
     width: 100%;
     height: 140px;
     background-color: white;
@@ -154,9 +155,9 @@
 /* contact section */
 .contactBox {
     position: relative;
-    top: 60px;
+    top: 43px;
     width: 100%;
-    height: 470px;
+    height: 410px;
     background-color: white;
     /*border-bottom: solid 2px rgb(224, 224, 224);*/
 }
