--- a/public/styles/ClassificationPopupStyles.css
+++ b/public/styles/ClassificationPopupStyles.css
@@ -9,7 +9,7 @@
     border-radius: 4px;
     z-index: 20000;
     box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Roboto';
 }
 
 .classificationTitleBox {
