--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -1,7 +1,7 @@
 
 html, body {
     scroll-behavior: smooth;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Roboto';
     width: 100%;
     top: 0px;
     bottom: 0px;
