--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -17,3 +17,13 @@ html, body {
     width: 100%;
     padding-bottom: 200px;
 }
+
+a {
+    text-decoration: none;
+    color: rgb(42, 72, 243);
+}
+
+a:visited {
+    text-decoration: none;
+    color: rgb(42, 72, 243);
+}
